# nyar-vm

./: Cargo.toml
.github/: dependabot.yml
projects/nyar-error/: Cargo.toml
projects/nyar-error/src/: lib.rs
projects/nyar-error/src/errors/: display.rs  from_num.rs  from_std.rs  mod.rs
projects/nyar-gc/: Cargo.toml
projects/nyar-gc/src/: errors.rs  lib.rs
projects/nyar-gc/src/heap/: mod.rs
projects/nyar-gc/src/values/: converts.rs  mod.rs
projects/nyar-gc/tests/: main.rs
projects/nyar-hir/: Cargo.toml
projects/nyar-hir/src/: lib.rs
projects/nyar-hir/src/ast/: expression.rs  mod.rs  statement.rs
projects/nyar-hir/src/compiler/: mod.rs
projects/nyar-hir/src/statements/: mod.rs
projects/nyar-hir/tests/: main.rs
projects/nyar-lir/: Cargo.toml
projects/nyar-lir/src/: control_flow.rs  instruction.rs  lib.rs  object.rs  value.rs  vm.rs
projects/nyar-lir/src/heap/: gc_ptr.rs  mod.rs
projects/nyar-lir/src/values/: mod.rs  objects.rs  vectors.rs
projects/nyar-vm/: Cargo.toml
projects/nyar-vm/examples/: simple_vm.rs
projects/nyar-vm/src/: compiler.rs  error.rs  heap.rs  instruction.rs  interpreter.rs  lib.rs  runtime.rs  value.rs  vm.rs
projects/nyar-vm/src/vm/: coroutine.rs  effect_handler.rs  environment.rs  instruction_executor.rs  memory_manager.rs  mod.rs  value_handler.rs
projects/nyar-vm/tests/: vm_test.rs
