[package]
name = "nyar-error"
version = "0.1.17"
authors = ["Aster <192607617@qq.com>"]
description = "Error types for valkyrie language"
repository = "https://github.com/nyar-vm/nyar-vm/tree/dev/projects/nyar-error"
documentation = "https://docs.rs/nyar-error"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num = { version = "0.4.3", features = ["rand", "serde"] }


[dev-dependencies]

[features]
default = []
