[package]
name = "nyar-lir"
version = "0.0.7"
authors = ["Aster <192607617@qq.com>"]
description = "Nyar语言的低级中间表示"
repository = "https://github.com/oovm/dialect"
documentation = "https://docs.rs/nyar-lir"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
semver = "1.0.24"
indexmap = "2.9.0"
string-pool = "0.2.1"
itertools = "0.13.0"
convert_case = "0.6.0"
dependent_sort = "0.2.0"
gc-arena = { version = "0.5.3", features = ["tracing"] }
num = { version = "0.4.0", features = ["serde"] }
tokio = { version = "1.28.0", features = ["full"] }

[dependencies.nyar-error]
version = "0.1.17"
path = "../nyar-error"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
