[package]
name = "nyar-vm"
version = "0.0.7"
authors = ["Aster <192607617@qq.com>"]
description = "Nyar语言虚拟机实现"
repository = "https://github.com/oovm/dialect"
documentation = "https://docs.rs/nyar-vm"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
semver = "1.0.24"
indexmap = "2.7.0"
string-pool = "0.2.1"
itertools = "0.13.0"
convert_case = "0.6.0"
dependent_sort = "0.2.0"
gc-arena = "0.5.0"
num = { version = "0.4.0", features = ["serde"] }
tokio = { version = "1.28.0", features = ["full"] }

[dependencies.nyar-error]
version = "0.1.17"
path = "../nyar-error"

[dependencies.nyar-hir]
version = "0.2.4"
path = "../nyar-hir"

[dependencies.nyar-lir]
version = "0.0.7"
path = "../nyar-lir"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
