[package]
name = "nyar-vm"
version = "0.0.7"
authors = ["Aster <192607617@qq.com>"]
description = "Nyar语言虚拟机实现"
repository = "https://github.com/oovm/dialect"
documentation = "https://docs.rs/nyar-vm"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }

[dependencies.nyar-lir]
version = "*"
path = "../nyar-lir"

[dependencies.nyar-hir]
version = "*"
path = "../nyar-hir"

[dependencies.nyar-error]
version = "*"
path = "../nyar-error"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
